# battle

./: F1TENTH_W5-W8_蒸馏部署_设计spec.md  F1TENTH_部署优先特权蒸馏方案.md  F1TENTH_部署时间安排.md  MID360_scan_问题排查与改动记录.md  README.md  W2_系统辨识与安全壳_使用指南.md  W3_三维多层感知_使用指南.md  W4_运动学测速与动态障碍_使用指南.md  W5_接地仿真与特权专家_使用指南.md  W6_BC学生蒸馏_使用指南.md  W7_DAgger与部署集成_使用指南.md  W8_消融与写作_使用指南.md  battle_fast2_node.yaml  battle_fast2_node_features.md  install_for_foxy.sh  new命令.txt  pointcloud_to_laserscan.yaml  周总结.md  周总结2.md  周总结3.md  实车使用.md  实车启动指南_W1-W4.md  笔记.txt
install/: local_setup.sh  setup.sh
install/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp  ackermann_mux_diagnostics.hpp  ackermann_mux_diagnostics_status.hpp  params_helpers.hpp  topic_handle.hpp  utils.hpp
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/costmap_converter/include/costmap_converter/: costmap_converter_interface.h  costmap_to_lines_convex_hull.h  costmap_to_lines_ransac.h  costmap_to_polygons.h  costmap_to_polygons_concave.h  misc.h
install/costmap_converter/share/costmap_converter/: costmap_converter_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/costmap_converter_msgs/share/costmap_converter_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/f1tenth_stack/share/f1tenth_stack/: package.ps1  package.sh  package.xml
install/fast_lio/lib/fast_lio/: fastlio_mapping
install/fast_lio/share/fast_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/joy_teleop/share/joy_teleop/: package.ps1  package.sh  package.xml
install/key_teleop/share/key_teleop/: package.ps1  package.sh  package.xml
install/linefit_ground_segmentation/include/ground_segmentation/: bin.h  ground_segmentation.h  segment.h  typedefs.h  viewer.h
install/linefit_ground_segmentation/share/linefit_ground_segmentation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/linefit_ground_segmentation_ros/lib/linefit_ground_segmentation_ros/: ground_segmentation_node  ground_segmentation_test_node
install/linefit_ground_segmentation_ros/share/linefit_ground_segmentation_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/mouse_teleop/share/mouse_teleop/: package.ps1  package.sh  package.xml
install/multilayer_scan/lib/multilayer_scan/: multilayer_scan_node
install/multilayer_scan/share/multilayer_scan/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
install/teb_local_planner/share/: teb_local_planner_plugin.xml
jetson_ws/: .gitignore
log/: latest_build  latest_list
src/slash_distill/: package.xml  setup.cfg  setup.py
src/slash_distill/config/: distill.yaml  sysid_params.yaml
src/slash_distill/launch/: race_student.launch.py
src/slash_distill/slash_distill/: __init__.py  build_trt.sh  collect_demos.py  dagger.py  eval_closed_loop.py  export_onnx.py  make_figures.py  params.py  run_ablations.py  train_bc.py
src/slash_distill/slash_distill/common/: ggv.py  obs.py  reactive.py
src/slash_distill/slash_distill/experts/: centerline.py  pursuit_expert.py
src/slash_distill/slash_distill/models/: policy.py  student_cnn.py
src/slash_distill/slash_distill/nodes/: student_policy_node.py
src/slash_distill/slash_distill/sim/: grounded_env.py  opponent.py  rollout.py
src/slash_navigation/creat_line/: rstp_data_collector.py
src/slash_navigation/roboracer_china_2025/: setup.cfg  setup.py
src/slash_navigation/roboracer_china_2025/install/roboracer_china_2025/share/roboracer_china_2025/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/slash_navigation/roboracer_china_2025/install/roboracer_china_2025/share/roboracer_china_2025/launch/: battle_fast2.launch.py
src/slash_perception/multilayer_scan/: package.xml  setup.cfg  setup.py
src/slash_perception/multilayer_scan/config/: multilayer_scan.yaml
src/slash_perception/multilayer_scan/launch/: multilayer_scan.launch.py  race_3d.launch.py
src/slash_perception/multilayer_scan/multilayer_scan/: multilayer_scan_node.py
src/slash_perception/obstacle_tracker/: package.xml  setup.cfg  setup.py
src/slash_safety/: package.xml  setup.cfg  setup.py
src/slash_safety/config/: ggv_shield.yaml
src/slash_safety/launch/: ggv_shield.launch.py  race_with_shield.launch.py
src/slash_sysid/: package.xml  setup.cfg  setup.py
src/slash_sysid/launch/: circle_test.launch.py
src/slash_sysid/slash_sysid/: chassis_sysid.py
(+749 files in other folders)
